objects/ffct__Bundle_Provision_State__c.object
<CustomObject>
    <description>Object to maintain the state on provisioning an org</description>
    <fields>
        <fullName>ffct__Access_Token__c</fullName>
        <label>Access Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Async_Id__c</fullName>
        <label>Async Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Bundle_Id__c</fullName>
        <label>Bundle Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__FolderId__c</fullName>
        <label>FolderId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Instance_URL__c</fullName>
        <label>Instance URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ffct__IsAPICall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is API Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__SignupRequest_Id__c</fullName>
        <label>SignupRequest Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__SkipInstalledPackages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Installed Packages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CONSULTING_TOOLS_INSTALLED</fullName>
                </value>
                <value>
                    <fullName>SIGNUPREQUEST_RECORD_CREATED</fullName>
                </value>
                <value>
                    <fullName>ACCESS_TOKEN_IS_FETCHED</fullName>
                </value>
                <value>
                    <fullName>CONSULTING_TOOLS_INSTALLATION_STARTED</fullName>
                </value>
                <value>
                    <fullName>BUNDLE_IMPORT_STARTED</fullName>
                </value>
                <value>
                    <fullName>BUNDLE_IMPORT_COMPLETED</fullName>
                </value>
                <value>
                    <fullName>BUNDLE_EXPORT_STARTED</fullName>
                </value>
                <value>
                    <fullName>BUNDLE_EXPORT_COMPLETED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__TSOConnection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TSOConnection</label>
        <referenceTo>ffct__Connection__c</referenceTo>
        <relationshipLabel>Bundle Provision States</relationshipLabel>
        <relationshipName>Bundle_Provision_States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__TargetOrgUsername__c</fullName>
        <label>TargetOrgUsername</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bundle_Provision_States</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bundle Provision State</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <columns>NAME</columns>
        <columns>ffct__Complete__c</columns>
        <columns>ffct__Error__c</columns>
        <columns>ffct__Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffct__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPS-{0000}</displayFormat>
        <label>Bundle Provision State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Provision States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>